mb before rebase conflicts

--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <!--
-	<!-- Copyright Notice! -->
+	Copyright Notice!
+	adding changes before rebasing conflicts
 -->
 <head>
 	<title>Example Website</title>
