fb adding some trouble to simple.html

--- a/simple.html
+++ b/simple.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <!--
 	Copyright Notice!
-	Some silly changes from master branch
 -->
 <head>
-	<title>Example Website</title>
-	<title>Sill changes on Master</title>
+	<title>Lots of Trouble</title>
 	<title>A Great Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
@@ -20,14 +18,10 @@
 	<main class="container">
 	<!-- Junk text -->
 		<p>
-			Just stuff for now,
-			not sure if we need to replace this or no		
+			Just nothin' but trouble.
 		</p>
 	</main>
 	<footer class="container">
-	
-		<p>&copy; Yugiboy naval 2014</p>
-		
 	</footer>
 </body>
 </html>
