mb conflicting changes brewing

--- a/simple.html
+++ b/simple.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <!--
 	Copyright Notice!
-	adding changes before rebasing conflicts
+	Some silly changes from master branch
 -->
 <head>
 	<title>Example Website</title>
-	<title>Very respectful Website</title>
+	<title>Sill changes on Master</title>
 	<title>A Great Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
@@ -18,17 +18,16 @@
 </head>
 <body>
 	<main class="container">
-	<!-- Content Goes Here -->
+	<!-- Junk text -->
 		<p>
-			Just some content
-			IDK what to add
-			ANG POGI NI YUGIN
+			Just stuff for now,
+			not sure if we need to replace this or no		
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
-		<p>&copy; Eugene naval 2014</p>
-		<p>&copy; Git training 2025</p>
+	
+		<p>&copy; Yugiboy naval 2014</p>
+		
 	</footer>
 </body>
 </html>
