Adding changes after rebasing conflict

--- a/simple.html
+++ b/simple.html
@@ -3,8 +3,7 @@
 	Copyright Notice!
 -->
 <head>
-	<title>Lots of Trouble</title>
-	<title>A Great Website</title>
+	<title>Lots of Trouble, in a little repository</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
