local: updating simple.html copyright notice

--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 	Copyright Notice!
 -->
 <head>
-	<title>Lots of Trouble, in a little repository</title>
+	<title>Lots of Trouble, in a little repository </title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -21,6 +21,7 @@
 		</p>
 	</main>
 	<footer class="container">
+		<p> &copy; 2025 Git.Training by accenture, All rights reserved. </p>
 	</footer>
 </body>
 </html>
