--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 	Copyright Notice!
 -->
 <head>
-	<title>Lots of Trouble, in a little repository </title>
+	<title>Updating Title for stash example  </title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,7 +17,7 @@
 	<main class="container">
 	<!-- Junk text -->
 		<p>
-			Just nothin' but trouble.
+			Adding more important content here.
 		</p>
 	</main>
 	<footer class="container">
