--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 	Copyright Notice!
 -->
 <head>
-	<title>Updating Title for stash example  </title>
+	<title>Updating Title for tagging compare example  </title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
